--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-multipart==0.0.6
-supabase==2.0.2
-duckdb==0.9.2
-pandas==2.1.4
-requests==2.31.0
-python-dotenv==1.0.0
+fastapi
+uvicorn
+python-multipart
+supabase
+duckdb
+pandas
+requests
+python-dotenv
